# im-parse

./: .gitignore  README.md
android/: ComposeRenderer.kt
docs/: Delta.swift  DeltaParser.swift  Op.swift  architecture.md  cpp-vs-rust-analysis.md  requirements.md
ios/: SETUP.md  build.sh  fix-rust-path.sh  setup-rust.sh
ios/IMParseSDK/: .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  FIXES.md  IMParseSDK.podspec  INSTALL.md  LICENSE  README.md  STRUCTURE.md  USAGE_GUIDE.md  XCFRAMEWORK.md  build-rust-lib.sh
ios/IMParseSDK/IMParseSDK/: IMParseSDK.h
ios/IMParseSDK/IMParseSDK/Classes/Core/: IMParseBridge.h  IMParseBridge.swift
ios/IMParseSDK/IMParseSDK/Classes/Models/: ASTNodes.swift  (+2 more)
ios/iOS-demo/: FIXES.md  MIGRATION.md  Podfile  README.md  README_SDK.md
ios/iOS-demo/iOS-demo/: DemoApp.swift  IMParseBridge.h  IMParseBridge.swift  Info.plist  MathHTMLRenderer.swift  MermaidHTMLRenderer.swift  Message.swift  MessageDataGenerator.swift  MessageHTMLView.swift  MessageHTMLViewController.swift  SharedWebViewPool.swift  StyleConfig.swift  SwiftUIMessageListView.swift  SwiftUIRenderer.swift  UIKitLayoutCalculator.swift  UIKitMessageListViewController.swift  UIKitRenderer.swift
ios/iOS-demo/iOS-demo.xcodeproj/: project.pbxproj
ios/iOS-demo/iOS-demo/Views/: Message.swift  MessageHTMLView.swift  MessageHTMLViewController.swift
rust-core/: Cargo.toml
rust-core/src/: ast.rs  ast_builder.rs  cache.rs  delta_parser.rs  ffi.rs  height_calculator.rs  html_renderer.rs  html_styles.css  lib.rs  markdown_parser.rs  style_config.rs
web/src/: RenderAST.tsx  types.ts
(+7 files in other folders)
