[package]
name = "im-parse-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
ffi = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
thiserror = "1.0"
hashbrown = "0.14"
katex-rs = "0.2"

[dev-dependencies]
criterion = "0.5"

